remove added image on cancel edit personal details

--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -292,7 +292,7 @@
 					<label for="upload-user-image">
 						<img class='file-image' src='resources/upload-icon.png'/>
 					</label>
-					<input id="upload-user-image" type="file" style="display:none;" ondrop='drop()' onchange='onChange(this)'>
+					<input id="upload-user-image" type="file" style="display:none;" ondrop='drop()' onchange='onPersonalDetailsChange(this)'>
 				</div>
 				<br>
 				<span style="display:inline-block;">
