update user details

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,12 +15,13 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script src="javascript/login.js"></script>
+  <script src="javascript/register.js"></script>
   <script src="javascript/index.js"></script>
   
 </head>
 
 	
-<body id="myPage" data-spy="scroll"   >
+<body id="myPage" data-spy="scroll">
 
 
 	
